--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "begin": "nodemon server.js"
+    "begin": "nodemon main.js"
   },
   "author": "",
   "license": "ISC",
